Adding methods to delete,insert,update,display and connecting the splash

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,11 +3,11 @@ plugins {
 }
 
 android {
-    namespace 'com.example.todoapp'
+    namespace 'com.example.firsttodoapp'
     compileSdk 33
 
     defaultConfig {
-        applicationId "com.example.todoapp"
+        applicationId "com.example.firsttodoapp"
         minSdk 32
         targetSdk 33
         versionCode 1
