--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,26 +13,23 @@
         android:theme="@style/AppTheme"
         tools:targetApi="31">
         <activity
-            android:name="com.example.todoapp.SplashActivity"
-            android:exported="true" >
-                <intent-filter>
-                    <action android:name="android.intent.action.MAIN" />
-
-                    <category android:name="android.intent.category.LAUNCHER" />
-
-                </intent-filter>
-        </activity>
-
-        <!--        added the  return activity for the second Activity-->
+            android:name="com.example.todoapp.AboutActivity"
+            android:exported="false" />
         <activity
+            android:name="com.example.todoapp.SplashActivity"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
 
-            android:name="com.example.todoapp.EditTodoActivity" android:parentActivityName="com.example.todoapp.MainActivity"></activity>
-
-
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity> <!-- added the  return activity for the second Activity -->
+        <activity
+            android:name="com.example.todoapp.EditTodoActivity"
+            android:parentActivityName="com.example.todoapp.MainActivity" />
         <activity
             android:name="com.example.todoapp.MainActivity"
-            android:exported="true">
-        </activity>
+            android:exported="true"></activity>
     </application>
 
 </manifest>
